--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 ---
 
 layout:     default
-title:      Why Jekyll rocks
+title:      Présentation de la chaire
 type:       home
 navigation: true
 
-date:       2014-05-08
+date:       2019-10-14
 image:      header-1.jpg
-excerpt:    Let's face it, there are literally <i>millions of ways to create and manage a website or blog</i> these days and all of them got dark and bright sides. <b>Jekyll</b> is yet another, albeit incredible way to do so and <b>Hashtag for Jekyll</b> adds a sweet little face to it so your site doesn't turn into <b>Mr. Hyde</b>. <a href="/about.html" title="Continue" class="more">Continue</a>
+excerpt:    Society is experiencing an unprecedented algorithmic turn. The Algorithmic Society Chair will take a triple challenge to understand this turn : an empirical challenge by studying AI in its immediate social settings, an experimental challenge by proposing innovative cross-disciplinary research on biases in AI and a cultural challenge by fostering a new AI literacy among social science students.
 gradient:   1
 
 ---
 
-<div class="summary">
-
-  <p>Well, I guess it's quite obvious that I really enjoy working with Jekyll — <b>with good reasons</b> — so let me just briefly suggest some of the benefits of using a static site generator in favor of a heavy dynamic, database driven content management system. <a href="/why-jekyll.html" title="Continue" class="more">Continue</a></p>
-
-</div>
-
-<h2>Guides</h2>
-<p>Please follow these guides in order to get a good impression about the themes functionality and how it works.</p>
+<h2>Last updates</h2>
+<p>These are the last posts documenting the activity of the chair.</p>
 
 {% for post in paginator.posts %}
 
