--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 layout:     default
 title:      Présentation de la chaire
-type:       page
+type:       home
 navigation: true
 
 date:       2019-10-14
